--- a/.github/workflows/cd_backend.yml
+++ b/.github/workflows/cd_backend.yml
@@ -1,3 +1,44 @@
 ## BUild the docker image
 ## Push the docker image to docker hub
 ## ssh into the vm and sart the new image
+
+name: Deploy Backend
+on:
+  push:
+    branches: [main]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        file: ./docker/Dockerfile.backend
+        push: true
+        tags: user123/todo-app-backend:${{github.sha}}
+
+      ## steps to deploy it on VM
+
+    # - name: SSH and deploy
+    #   uses: appleboy/ssh-action@v0.1.7
+    #   with:
+    #     host: ${{ secrets.VM_HOST }}
+    #     username: ${{ secrets.VM_USERNAME }}
+    #     key: ${{ secrets.VM_SSH_KEY }}
+    #     script: |
+    #       docker pull ${{ secrets.DOCKERHUB_USERNAME }}/todo-backend:latest
+    #       docker stop todo-backend || true
+    #       docker rm todo-backend || true
+    #       docker run -d --name todo-backend -p 8080:8080 ${{ secrets.DOCKERHUB_USERNAME }}/todo-backend:latest
