--- a/.github/workflows/cd_backend.yml
+++ b/.github/workflows/cd_backend.yml
@@ -30,4 +30,8 @@ jobs:
         tags: trivendra07/todo-app-backend:${{github.sha}}
 
       ## steps to deploy it on VM
-
+    - name: Deploy to VM
+      run: |
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" &> ~/ssh_key
+          chmod 700 /home/runner/ssh_key
+          ssh -o StrictHostKeyChecking=no -i ~/ssh_key root@195.35.20.98 -t "docker stop user_backend && docker run --name user_backend -d -p 8080:8080 trivendra07/todo-app-backend:${{ github.sha }}"
