--- a/docker/Dockerfile.frontend
+++ b/docker/Dockerfile.frontend
@@ -4,11 +4,9 @@ WORKDIR /user/src/app
 
 ARG DATABASE_URL
 COPY ./packages ./packages
-COPY ./bun.lock ./bun.lock    
-
+COPY ./bun.lock ./bun.lock
 COPY ./package.json ./package.json
-COPY ./turbo.json ./turbo.json 
-
+COPY ./turbo.json ./turbo.json
 COPY ./apps/web ./apps/web
 
 RUN bun install
@@ -16,6 +14,8 @@ RUN bun add -d prisma@6 @prisma/client@6
 RUN bun run db:generate
 RUN DATABASE_URL=${DATABASE_URL} bun run build
 
-EXPOSE 3000
+ENV NODE_ENV=production
+ENV NEXT_PRIVATE_DISABLE_TURBOPACK=1
 
-CMD [ "bun", "run", "start:web" ]
+EXPOSE 3000
+CMD ["bun", "run", "start:web"]
