--- a/.github/workflows/cd_frontend.yml
+++ b/.github/workflows/cd_frontend.yml
@@ -1,6 +1,5 @@
-## BUild the docker image
+## Build the docker image
 ## Push the docker image to docker hub
-## ssh into the vm and sart the new image
 
 name: Deploy frontend
 on:
@@ -12,24 +11,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v4
-      with:
-        context: .
-        file: ./docker/Dockerfile.frontend
-        build-args:
-          - DATABASE_URL=${{ secrets.DATABASE_URL }}
-        push: true
-        tags: trivendra07/todo-app-frontend:${{github.sha}}
-
-      ## steps to deploy it on VM
-
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: ./docker/Dockerfile.frontend
+          build-args: |
+            DATABASE_URL=${{ secrets.DATABASE_URL }}
+          push: true
+          tags: trivendra07/todo-app-frontend:${{ github.sha }}
