--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "start:web": "cd apps/web && bun run start",
     "start:backend": "cd apps/backend &&  bun run index.ts",
     "start:websocket": "cd apps/websocket && bun run index.ts"
-
   },
   "devDependencies": {
     "prettier": "^3.7.4",
+    "prisma": "6",
     "turbo": "^2.7.3",
     "typescript": "5.9.2"
   },
